[package]
name = "surf-middleware-cache"
description = "A caching middleware for Surf"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>", "Christian Haynes <06chaynes@gmail.com>"]
edition = "2018"

[dependencies]
bincode = { version = "1.3", optional = true }
cacache = { version = "9.0", optional = true }
http = "0.2"
httpdate = "1.0"
http-cache-semantics = "0.9"
http-types = "2.12"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
surf = "2.3"

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"]}

[features]
default = ["manager-cacache"]
manager-cacache = ["cacache", "serde", "bincode"]
