[package]
name = "surf-middleware-cache"
description = "A caching middleware for Surf"
version = "0.2.2"
authors = ["Kat Marchán <kzm@zkat.tech>", "Christian Haynes <06chaynes@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/06chaynes/surf-middleware-cache"
homepage = "https://github.com/06chaynes/surf-middleware-cache"
readme = "README.md"
keywords = ["cache", "surf", "middleware"]
categories = [
    "caching",
    "web-programming"
]
edition = "2018"

[dependencies]
bincode = { version = "1.3", optional = true }
cacache = { version = "9.0", optional = true }
http = "0.2"
httpdate = "1.0"
http-cache-semantics = "0.9"
http-types = "2.12"
serde = { version = "1.0", features = ["derive"], optional = true }
surf = "2.3"

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"]}
mockito = "0.30"

[features]
default = ["manager-cacache"]
manager-cacache = ["cacache", "serde", "bincode"]
